--- a/contact.html
+++ b/contact.html
@@ -24,22 +24,69 @@
 <body>
 	<!-- ====================================================
 	header section -->
-
+	<div class="top-bar">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="col-md-4">
+						<h3>Recent posts</h3>
+						<nav>
+							<ul class="recent-posts">
+								<li><a href="#">10 TIPS FOR MORE COLOUR IN YOUR PHOTOGRAPHY</a></li>
+								<li><a href="#">How to design users oriented</a></li>
+								<li><a href="#">Smart coding makes all easy</a></li>
+								<li><a href="#">KEEP CALM AND PLAY NICE WHENEVER POSSIBLE</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="col-md-4">
+						<h3>Text Widget here</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis minus provident illum quia ut debitis deserunt nemo, officiis earum similique dolorem, nesciunt ipsa vel at blanditiis iure! Tempore facilis, sapiente.</p>
+					</div>
+					<div class="col-md-4">
+						<h3>Tag clouds</h3>
+						<nav>
+							<ul class="tags list-inline">
+								<li><a href="#">WordPress</a></li>
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">Bootstrap</a></li>
+								<li><a href="#">WordPress</a></li>
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">Bootstrap</a></li>
+								<li><a href="#">WordPress</a></li>
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">Bootstrap</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="banner" id="home"></div>
 	<header class="header">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="top-nav"></div>
+				<div class="top-click">
+					<a href="#"><i class="fa fa-plus"></i></a>
+					<a href="#"><i class="fa fa-minus"></i></a>
+				</div>
+			</div>
+		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 no-padding">
 					<div class="col-md-12 text-center user">
 						<img src="img/user.jpg" alt="Me" class="img-circle">
-						<h1>Jasmine F</h1>
-						<h4>Fullstack Web Developer &amp; Animator</h4>
+						<h1>John Doe</h1>
+						<h4>Web UI Designer &amp; Developer living in Dhaka</h4>
 						<div class="social-icons">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-instagram"></i></a>
 							<a href="#"><i class="fa fa-linkedin"></i></a>
-							<a href="#"><i class="fa fa-github"></i></a>
+							<a href="#"><i class="fa fa-google-plus"></i></a>
 						</div>
 					</div>
 					<!-- nav starts here -->
@@ -81,7 +128,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h2>Get In Touch</h2>
-					<span>Don't Hesitate to Contact Me</span>
+					<span>Don't Hesitate to Contact with with Me.</span>
 					<form action="?" class="form-horizontal">
 						<input type="text" class="form-control" placeholder="Full Name" required>
 						<input type="email" class="form-control" placeholder="Your Email" required>
@@ -89,8 +136,8 @@
 						<textarea rows="5" class="form-control" placeholder="Type Your Message" required></textarea>
 						<select class="form-control">
 							<option>--- Reason for Contact ---</option>
-							<option>Web Development Consultation</option>
-							<option>2D/3D Animation Consultation</option>
+							<option>Development Help</option>
+							<option>Programming Tips</option>
 							<option>UX Consultation</option>
 							<option>Web Design</option>
 							<option>Others</option>
@@ -112,8 +159,9 @@
 						<p>I'm a Professional Web Developer. I have a great experience for a long time about Front-end and Wordpress theme development. I  try to give the best services.</p>
 						<a href="about.html">Read full about me</a>
 						<address>
-							E-mail: hyunfrantz@gmail.com <br>
-							Phone: 941.400.0075<br>
+							E-mail: hello@shapedtheme.com <br>
+							Phone: +88-0-1723 511 340 <br>
+							239/2 NA, Dhaka 1206, BD
 						</address>
 					</div>
 					<div class="col-md-4">
@@ -151,7 +199,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p>&copy; 2017 — Designed by <a href="#">Jasmine F</a> &amp; Developed by <a href="#">Jasmine F</a></p>
+						<p>&copy; 2015 — Designed by <a href="https://www.behance.net/khalilkode">Md. Khalil Uddin</a> &amp; Developed by <a href="http://mostafiz.me">Mostafizur Rahman</a></p>
 					</div>
 					<div class="col-md-6 footer-menu text-right">
 						<ul class="list-inline">
