Theme color, cover image, content images, replaced paragraphs, menu and contnet customized

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,69 +25,22 @@
 <body>
 	<!-- ====================================================
 	header section -->
-	<div class="top-bar">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="col-md-4">
-						<h3>Recent posts</h3>
-						<nav>
-							<ul class="recent-posts">
-								<li><a href="#">10 TIPS FOR MORE COLOUR IN YOUR PHOTOGRAPHY</a></li>
-								<li><a href="#">How to design users oriented</a></li>
-								<li><a href="#">Smart coding makes all easy</a></li>
-								<li><a href="#">KEEP CALM AND PLAY NICE WHENEVER POSSIBLE</a></li>
-							</ul>
-						</nav>
-					</div>
-					<div class="col-md-4">
-						<h3>Text Widget here</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis minus provident illum quia ut debitis deserunt nemo, officiis earum similique dolorem, nesciunt ipsa vel at blanditiis iure! Tempore facilis, sapiente.</p>
-					</div>
-					<div class="col-md-4">
-						<h3>Tag clouds</h3>
-						<nav>
-							<ul class="tags list-inline">
-								<li><a href="#">WordPress</a></li>
-								<li><a href="#">HTML</a></li>
-								<li><a href="#">Bootstrap</a></li>
-								<li><a href="#">WordPress</a></li>
-								<li><a href="#">HTML</a></li>
-								<li><a href="#">Bootstrap</a></li>
-								<li><a href="#">WordPress</a></li>
-								<li><a href="#">HTML</a></li>
-								<li><a href="#">Bootstrap</a></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	<div class="banner" id="home"></div>
 	<header class="header">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="top-nav"></div>
-				<div class="top-click">
-					<a href="#"><i class="fa fa-plus"></i></a>
-					<a href="#"><i class="fa fa-minus"></i></a>
-				</div>
-			</div>
-		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 no-padding">
 					<div class="col-md-12 text-center user">
 						<img src="img/user.jpg" alt="Me" class="img-circle">
-						<h1>John Doe</h1>
-						<h4>Web UI Designer &amp; Developer living in Dhaka</h4>
+						<h1>Jasmine F</h1>
+						<h4>Fullstack Web Developer &amp; Animator </h4>
 						<div class="social-icons">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-instagram"></i></a>
 							<a href="#"><i class="fa fa-linkedin"></i></a>
-							<a href="#"><i class="fa fa-google-plus"></i></a>
+							<a href="#"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 					<!-- nav starts here -->
@@ -128,12 +82,11 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<h2>Something about me</h2>
-					<span>UI/UX Designer &amp; Developer</span>
+					<span>Fullstack Developer &amp; Animator</span>
 
-					<img src="img/kallu.jpg" alt="" class="img-responsive">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, veritatis nulla in animi dolorem cum ipsum repellendus perferendis fugiat totam vel, aut laborum sit inventore, eum consequatur voluptatem rerum itaque velit! Est doloremque maiores assumenda commodi similique eum ex eligendi, voluptates omnis earum necessitatibus sunt velit, eius laboriosam. Dignissimos ex velit quidem repudiandae, ut laudantium optio, totam reprehenderit illum dolorum? Iure ipsam obcaecati omnis rem, quibusdam fugiat voluptates quidem officia odio nobis ad sed ab nemo nesciunt, quos asperiores? Aspernatur nulla consectetur sit ducimus quia quod eius, veniam doloremque minima quis dolores quasi officiis est harum, totam maxime quas. Voluptates.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci officia eos laboriosam similique dolorum, fugit a debitis, optio impedit recusandae natus omnis blanditiis veniam ad ipsam nulla eius facere, dolores! Aut, eligendi, velit quidem omnis debitis illo ratione atque dolore alias voluptate temporibus, dignissimos, tenetur minima ipsa delectus doloribus? Vel?</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae possimus recusandae explicabo veniam, ratione. Adipisci harum, eaque, possimus corporis architecto minus dolorem ipsa aliquid magni deleniti laudantium neque facilis excepturi culpa exercitationem maiores? Veniam dolorem dolores magni doloremque atque ad, beatae accusamus quas obcaecati quia, accusantium harum expedita numquam corporis voluptatem inventore soluta. Nemo corporis adipisci minima soluta laborum eligendi laboriosam omnis facilis inventore, recusandae possimus libero perspiciatis placeat quisquam!</p>
+					<img src="img/montreal.jpg" alt="" class="img-responsive">
+					<p>Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo. Yuntaa geni udemy napster chegg glogster plickers meebo, dropio grockit sococo jumo spotify tumblr heekya, airbnb convore ebay plickers handango hulu cloudera. Imeem lanyrd dropio hipmunk spock voxy octopart, wikia mozy spotify zoosk joyent gooru scribd, kazaa doostang ning lala mozy. Hulu plugg joyent palantir kosmix dropio akismet gsnap tivo wesabe, kazaa qeyno napster lijit jaiku divvyshot prezi zappos joyent zapier, napster plugg bebo unigo plickers mog zillow wufoo. Kaboodle eduvant sclipo foodzie zinch ning klout mog scribd octopart, ebay zapier zlio sclipo zoodles handango jajah flickr.</p>
+					<p>Wesabe zappos glogster kazaa voxy empressr jibjab nuvvo scribd eskobo, elgg quora jajah foodzie hulu yammer octopart zapier kiko, elgg mobly cuil skype convore elgg mog orkut. Zooomr dopplr skype handango insala edmodo cloudera ideeli heroku bubbli plaxo quora, ngmoco bebo plaxo blyve mobly zooomr eduvant koofers ifttt dogster chartly, plugg yammer zynga movity orkut knewton eduvant kiko imvu ngmoco. Whrrl mobly insala trulia udemy bebo oooooc hojoki tumblr scribd loopt heekya, joost zinch edmodo yuntaa blekko yoono joukuu insala fleck. Squidoo octopart knewton heekya doostang, insala zoosk. orem ipsum dolor sit amet, consectetur adipisicing elit. Vitae possimus recusandae explicabo veniam, ratione. Adipisci harum, eaque, possimus corporis architecto minus dolorem ipsa aliquid magni deleniti laudantium neque facilis excepturi culpa exercitationem maiores? Veniam dolorem dolores magni doloremque atque ad, beatae accusamus quas obcaecati quia, accusantium harum expedita numquam corporis voluptatem inventore soluta. Nemo corporis adipisci minima soluta laborum eligendi laboriosam omnis facilis inventore, recusandae possimus libero perspiciatis placeat quisquam!</p>
 				</div>
 			</div>
 		</div>
@@ -148,9 +101,8 @@
 						<p>I'm a Professional Web Developer. I have a great experience for a long time about Front-end and Wordpress theme development. I  try to give the best services.</p>
 						<a href="#home">Read full about me</a>
 						<address>
-							E-mail: hello@shapedtheme.com <br>
-							Phone: +88-0-1723 511 340 <br>
-							239/2 NA, Dhaka 1206, BD
+							E-mail: hyunfrantz@gmail.com <br>
+							Phone: 941.400.0075<br>
 						</address>
 					</div>
 					<div class="col-md-4">
@@ -188,7 +140,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<p>&copy; 2015 — Designed by <a href="https://www.behance.net/khalilkode">Md. Khalil Uddin</a> &amp; Developed by <a href="http://mostafiz.me">Mostafizur Rahman</a></p>
+						<p>&copy; 2017 — Designed by <a href="#">Jasmine F</a> &amp; Developed by <a href="#">Jasmine F</a></p>
 					</div>
 					<div class="col-md-6 footer-menu text-right">
 						<ul class="list-inline">
